<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_selectAll"
        android:title="@string/list_toolbar_overflow_selectAll"
        android:icon="@drawable/ic_menu_select_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_action_loadLast"
        android:title="@string/list_toolbar_overflow_loadLast"
        android:icon="@drawable/ic_menu_load_last"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_saveList"
        android:title="@string/list_toolbar_overflow_saveList"
        android:icon="@drawable/ic_menu_save_list_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_loadCustom"
        android:title="@string/list_toolbar_overflow_loadCustom"
        android:icon="@drawable/ic_menu_load_custom"
        app:showAsAction="never" />

</menu>