<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_load_custom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/dialog_load_custom_title"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dialog_load_custom_saveList_nest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:baselineAligned="false"
        android:maxHeight="248dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/dialog_load_custom_btn_positive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_load_custom_title"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.94">

        <ListView
            android:id="@+id/dialog_load_custom_saveList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_frame_bone"
            android:divider="@color/list_view_background_stroke_dark"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_load_custom_btn_positive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_cylindrical_general"
        android:textColor="@color/text_very_dark"
        android:text="@string/dialog_load_custom_positive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_load_custom_saveList_nest"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_load_custom_btn_negative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_cylindrical_negative"
        android:text="@string/dialog_load_custom_negative"
        android:textColor="@color/text_general"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_load_custom_saveList_nest"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>