<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:elevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_toolbar_menu_24"
        app:title="@string/list_toolbar_title_default"
        app:titleMarginBottom="10dp"
        app:titleTextColor="@color/background" />

    <AutoCompleteTextView
        android:id="@+id/list_itemNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_back_dark"
        android:completionThreshold="1"
        android:dropDownHeight="wrap_content"
        android:hint="@string/list_itemNameInputHint"
        android:inputType="textCapSentences"
        android:lines="1"
        android:maxLength="24"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/list_btn_addItem"
        app:layout_constraintTop_toBottomOf="@id/list_toolbar" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/list_btn_addItem"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_circle"
        android:stateListAnimator="@animator/add_button_animator"
        android:gravity="center"
        android:onClick="onClickAddItem"
        android:src="@drawable/ic_btn_add"
        app:layout_constraintLeft_toRightOf="@id/list_itemNameInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_toolbar" />

    <!-- ListView had to be nested for scroll to work properly -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_itemNameInput">

        <ListView
            android:id="@+id/list_shopList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_back_dark"
            android:divider="@color/list_view_background_stroke_dark"
            android:dividerHeight="1dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/list_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/list_empty_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_itemNameInput" />

</androidx.constraintlayout.widget.ConstraintLayout>